--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,9 +19,7 @@
     "target": "es2022",
     "module": "es2020",
     "lib": ["es2018", "dom"],
-    "useDefineForClassFields": false,
-    "strictPropertyInitialization": false,
-    "strictNullChecks": false
+    "useDefineForClassFields": false
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
